Test Latex Support

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -2,6 +2,8 @@
 layout: archive
 ---
 
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 {{ content }}
 
 <ul class="taxonomy__index">
