--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -113,7 +113,7 @@ body {
   p,
   li,
   dl {
-    font-size: 0.8em;
+    font-size: $type-size-6;
   }
 
   /* paragraph indents */
@@ -142,7 +142,7 @@ body {
   :not(pre) > code {
     padding-top: 0.1rem;
     padding-bottom: 0.1rem;
-    font-size: 0.8em;
+    font-size: $type-size-6;
     background: $code-background-color;
     border-radius: $border-radius;
 
