--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -110,10 +110,12 @@ body {
 		}
 	}
 
-  p,
-  li,
-  dl {
+  p {
     font-size: 0.8em;
+  }
+
+  li, dl {
+    font-size: 0.9em;
   }
 
   /* paragraph indents */
